# borg

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  IR-Sensor_Praesentation.pptx  Makefile  README.md  create_presentation.py  docker-compose.yml  hello.py  my-second-brain-requirements.md  requirements.txt
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml
backend/app/: config.py  database.py  main.py
backend/app/agent_sandbox/: Dockerfile  Dockerfile.pi  __init__.py  router.py  schemas.py  service.py
backend/app/archon_hub/: models.py  router.py  scanner.py  schemas.py  service.py
backend/app/archon_system/: __init__.py  client.py  models.py  router.py  schemas.py  service.py
backend/app/auth/: models.py  router.py  schemas.py  service.py
backend/app/discord_bot/: __init__.py  bot.py  config.py  handlers.py  listener.py  llm.py  models.py  router.py  service.py
backend/app/dreaming/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/locutus/: __init__.py  gap_analysis.py  models.py  router.py  (+2 more)
backend/tests/: conftest.py  test_agent_sandbox.py  test_api.py  test_archon_system.py  test_discord_bot.py  test_dreaming.py  test_federated_search.py  test_gap_analysis.py  test_insights.py  test_locutus_approval_gate.py  test_locutus_audit.py  test_locutus_phase2.py  test_locutus_skill_creation.py  test_meeting.py  test_observability.py  test_peer_sync_diff.py  test_peer_sync_manifest.py  test_personas.py  test_relations.py  test_seven_agent_mode.py  test_skills.py  test_sync_agent.py  test_tracing.py  test_vault_graph.py
(+189 files in other folders)
