[project]
name = "borgos-backend"
version = "0.1.0"
description = "BorgOS Platform Backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.6",
    "sqlalchemy[asyncio]>=2.0.38",
    "aiosqlite==0.20.0",
    "alembic==1.13.3",
    "python-jose[cryptography]==3.3.0",
    "bcrypt>=4.0.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv==1.0.1",
    "python-multipart==0.0.12",
    "pyyaml>=6.0.0", "python-frontmatter>=1.1.0",
    "apscheduler>=3.10.0",
    "watchfiles>=0.22.0",
    "httpx>=0.27.0",
    "discord.py>=2.4.0",
    "langfuse>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.3",
    "pytest-asyncio==0.24.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
